test/classes/casts/GenericDowncast.4.good
GenericDowncast.chpl:6: In function 'main':
GenericDowncast.chpl:25: error: illegal downcast to generic superclass type 'unmanaged D'
